--- a/final_report.tex
+++ b/final_report.tex
@@ -52,7 +52,7 @@ The Servo project is developed and maintained by the free-software community Moz
 While some dependencies and set up code is written in a different language, the main programming language remains Rust. This works well with the main focus of Servo: a highly parallel, safe and fast alternative to current engines. Rust was designed to be just that, by requiring the programmer to be very explicit with typing and error handling. This helps catching most errors at compilation time using static analysis. More details about the features of the Rust language are explained in section \ref{rust_features}.
 
 \subsection{Requirements, Specifications and Documentation under Mozilla}
-Servo is an open source project hosted on GitHub\footnote{https://github.com/servo/servo}. As with most open source projects, the core developers have established a well documented GitHub workflow\footnote{https://github.com/servo/servo/wiki/Github-workflow}. It consists of the standard steps that go with any Github project where you don't have write access:
+Servo is an open source project hosted on GitHub\footnote{\url{https://github.com/servo/servo}}. As with most open source projects, the core developers have established a well documented GitHub workflow\footnote{\url{https://github.com/servo/servo/wiki/Github-workflow}}. It consists of the standard steps that go with any Github project where you don't have write access:
 \begin{enumerate}
     \item Fork the original repository
     \item Write and commit your contribution into a branch in your fork.
@@ -61,9 +61,9 @@ Servo is an open source project hosted on GitHub\footnote{https://github.com/ser
     \item The reviewer states his approval, triggers build bot to run automated tests and merges the Pull Request
 \end{enumerate}
 
-Every Pull Request needs to pass the contribution checklist\footnote{\label{contributing}https://github.com/servo/servo/blob/master/CONTRIBUTING.md}. It covers technicalities such as: Every change needs to be accompanied by ``tests relevant to the fixed bug or new feature''\footnote{See last point at footnote \ref{contributing}.} which is to be evaluated by one of the reviewers from the core team. But it also includes the Rust Code of Conduct\footnote{http://www.rust-lang.org/conduct.html} to ensure a friendly and welcoming environment for all contributors.  \\
+Every Pull Request needs to pass the contribution checklist\footnote{\label{contributing}\url{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}}. It covers technicalities such as: Every change needs to be accompanied by ``tests relevant to the fixed bug or new feature''\footnote{See last point at footnote \ref{contributing}.} which is to be evaluated by one of the reviewers from the core team. But it also includes the Rust Code of Conduct\footnote{\url{http://www.rust-lang.org/conduct.html}} to ensure a friendly and welcoming environment for all contributors.  \\
 
-Further documentation can be found in the servo wiki\footnote{https://github.com/servo/servo/wiki} hosted on Github. In addition to the above points it includes protocol notes on the biweekly meetings, long and short term goals, and a vast amount of documents aimed at helping with development and testing.
+Further documentation can be found in the servo wiki\footnote{\url{https://github.com/servo/servo/wiki}} hosted on Github. In addition to the above points it includes protocol notes on the biweekly meetings, long and short term goals, and a vast amount of documents aimed at helping with development and testing.
 
 \subsection{Current testing status} \label{test_status}
 
@@ -72,7 +72,7 @@ As of Jan 2015 the code base of Servo core (without dependencies) contains 110k 
     \item \textbf{./mach test-unit}: Runs 233 low level test binaries, that test important code. Especially used in dependencies.
     \item \textbf{./mach test-wpt}: Runs 3764 web-platform-tests. 
     \item \textbf{./mach test-css}: Runs 7097 CSS Working Group tests.
-    \item \textbf{./mach test-ref}: Runs 5 reference tests(including the famous acid2 test\footnote{http://www.webstandards.org/files/acid2/test.html}). These consist of rendering two pages and comparing them.
+    \item \textbf{./mach test-ref}: Runs 5 reference tests(including the famous acid2 test\footnote{\url{http://www.webstandards.org/files/acid2/test.html}}). These consist of rendering two pages and comparing them.
     \item \textbf{./mach test-dromaeo}: Runs the Dromaeo test suite. This suite is geared towards javascript performance testing. It did not execute succesfully when we called it.
     \item \textbf{./mach test-jquery}: Runs the jQuery test suite. It did not execute succesfully when we called it.
     \item \textbf{./mach test-tidy}: Runs the source code tidiness check.
@@ -81,32 +81,37 @@ As of Jan 2015 the code base of Servo core (without dependencies) contains 110k 
 Some other commands are still documented in the wiki and the help pages but are now deprecated (like ./mach test-content). These tests currently contain about 70-80 tests that fail intermittently.This often slows down the process of contributing working code. We encountered this while placing a Pull Request that fixed about 150 code lints found by rust-clippy (see chapter \ref{clippy}).
 
 \paragraph{The tracking and fixing of Issues}
-As with most open source projects hosted on Github, the issue tracker\footnote{https://github.com/features} is used to track bugs, issues and features. It employs several handy features that make it easy to organize the frequent discussions and comments surrounding Issues and Pull Request. Both get assigned numbers, which when mentioned in any comment automatically link to the corresponding Issue or Pull Request. Issues automatically record when they were ``mentioned'' in another discussion. This builds a coherent map of Issues and their corresponding fixes (WIP or not).
+As with most open source projects hosted on Github, the issue tracker\footnote{\url{https://github.com/features}} is used to track bugs, issues and features. It employs several handy features that make it easy to organize the frequent discussions and comments surrounding Issues and Pull Request. Both get assigned numbers, which when mentioned in any comment automatically link to the corresponding Issue or Pull Request. Issues automatically record when they were ``mentioned'' in another discussion. This builds a coherent map of Issues and their corresponding fixes (WIP or not).
 
 \paragraph{Mozillas mach system}
 Mozilla's mach system (from the german word ``machen'': to do) is at the core of the Servo project. It's usage with invoking tests was already introduced earlier. But it also makes it easy to compile and run the Servo binary or other related tools like rust-clippy (see chapter \ref{clippy}). While mach is a powerful tool it should theoretically not be necessary as the Rust language brings its own packaginf system ``cargo''
 
 
-- Servo is scheduled in Q4 2015 for alpha release ``that just works'' (mobile, but also other platforms)\footnote{https://github.com/servo/servo/wiki/Roadmap}
+- Servo is scheduled in Q4 2015 for alpha release ``that just works'' (mobile, but also other platforms)\footnote{\url{https://github.com/servo/servo/wiki/Roadmap}}
 
 
 \section{Initial Test Plan}
 \subsection{THE five V\&V questions}
 \paragraph{When do verification and validation start? When are they complete?}
-V \& V starts with the begining of the project. As with many open source project that are developed by the community, the stakeholder or ``customer'' is the community itself. Which means that developer and customer are often the same person. In the case of servo the software is validated in bi-weekly meetings\footnote{https://github.com/servo/servo/wiki/Meetings} where both short-term next steps and long term milestones are discussed.\\
+V \& V starts with the begining of the project. As with many open source project that are developed by the community, the stakeholder or ``customer'' is the community itself. Which means that developer and customer are often the same person. In the case of servo the software is validated in bi-weekly meetings\footnote{\url{https://github.com/servo/servo/wiki/Meetings}} where both short-term next steps and long term milestones are discussed.\\
   
-  Verification is done through an extensive testing system. It is maintained by every developer as every code change needs to be accompanied by a test before it is merged into the code base. This test suite runs on every reviewed pull request, via two build servers (bors-servo\footnote{https://github.com/bors-servo} and buildbot\footnote{http://servo-buildbot.pub.build.mozilla.org/}). This ensures that no new bugs are introduced into the system.\\
+  Verification is done through an extensive testing system. It is maintained by every developer as every code change needs to be accompanied by a test before it is merged into the code base. This test suite runs on every reviewed pull request, via two build servers (bors-servo\footnote{\url{https://github.com/bors-servo}} and buildbot\footnote{\url{http://servo-buildbot.pub.build.mozilla.org/}}). This ensures that no new bugs are introduced into the system.\\
   
 V \& V will never be complete. Even after the release there will always be bog fixes or new features that need to be tested as well. One could argue that V \& V ends when the project gets abandoned but you can hardly call that a complete state.
+
 \paragraph{What particular techniques should be applied during development?}
-  
-\todo{do}
+Servo is already a well tested system. But it lacks a lot of even basic V \& V features like a report on any kind of test coverage. Furthermore we would like to see tests about parallel execution. These are hard to write and execute but a project having concurrency as one of it's main three points should test it.
+
 \paragraph{How can we assess the readiness of a product?} 
-\todo{do}
+The readiness of the product is currently assessed in biweekly meetings of the servo core team. There should be assessment by an outside party to prevent building unneccessary features and to keep a fresh new perspective regarding V \& V on the project.
+
 \paragraph{How can we control the quality of successive releases?}
-\todo{do}
+The Servo project already has the basic automated testing feature covered: Regression tests with the merge of every Pull Request. This assures, that no change makes the code base worse according to the test suite. Which in turn places the whole quality assurance on software tests. It is important, that these are as complete as possible. In addition to test that test parallel execution, performance tests should also be part of Servos test suite. Benchmarks of servo vs gecko were computed at some point\footnote{\url{https://www.phoronix.com/scan.php?page=news_item&px=MTgzNDA}}. But including them in the test suite would help to find less performant changes, that slow execution down from one release to another.
+
 \paragraph{How can the development process itself be improved?}
-\todo{do}
+The development process used by Servo is very standard to many professional open source projects with not exorbitant budgets. When you don't have the resources to hire a separate testing team or a V \& V specialist the approach to have every developer test his own code and do full regression testing at every step is a successful model. It is hard to improve it without raising the budget. 
+
+
 \subsection{Test Classifications}
 
 \paragraph{Validation and Defect Testing}
@@ -121,7 +126,7 @@ The biggest part of the test suite used in the Servo project is focused on valid
 
 
 \paragraph{Development, Release and User Testing}
-These three forms of testing are all present but hardly differentiable in the Servo project. This is due to the fact, that the core development team combines developers, release testers and users in the same team. The tests are mostly used during development for regression testing. But there is no separate test suite or separate test team used before releases. It is done by the community but mostly the core members as well. Finally the core developers are also the users, as they represent Mozilla. Ultimately Mozilla wants to replace the gecko\footnote{https://developer.mozilla.org/en-US/docs/Mozilla/Gecko} engine with Servo. Thus the core team develops, releases and decides when Servo is ready for the user: themselves. From a testers perspective this is not an optimal state to create a complete testing suite. A separate release testing team or at least an internal group posing as the "users" would be helpful to get an outside perspective on the readiness and validity of the product.
+These three forms of testing are all present but hardly differentiable in the Servo project. This is due to the fact, that the core development team combines developers, release testers and users in the same team. The tests are mostly used during development for regression testing. But there is no separate test suite or separate test team used before releases. It is done by the community but mostly the core members as well. Finally the core developers are also the users, as they represent Mozilla. Ultimately Mozilla wants to replace the gecko\footnote{\url{https://developer.mozilla.org/en-US/docs/Mozilla/Gecko}} engine with Servo. Thus the core team develops, releases and decides when Servo is ready for the user: themselves. From a testers perspective this is not an optimal state to create a complete testing suite. A separate release testing team or at least an internal group posing as the "users" would be helpful to get an outside perspective on the readiness and validity of the product.
 
 \paragraph{Unit-, Integration- and System-testing}
 As can be seen in chapter \ref{test_status} the unit tests only make up a fraction of the overall test suite. Integration tests are sometimes used in the dependencies, but do not get executed when testing the main Servo binary. The biggest part are the system tests. all WPT and CSS WG tests are system level tests as they execute the servo binary and try to actually use the whole rendering engine. This testing approach that focuses mainly on system tests makes sense for testing a web engine, as there are a lot of formal requirements that can easily and exhaustively be tested on the whole product.
@@ -131,9 +136,6 @@ As can be seen in chapter \ref{test_status} the unit tests only make up a fracti
 
 \subsection{Develop \& document initial test plan based on your findings}
 \todo{do}
-
-
-\newpage
 
 
 
@@ -174,7 +176,7 @@ Servo uses \texttt{cargo test} for running the unit tests. For running the more 
 Not even basic statement coverage has been ever calculated for the whole Servo project. As this is one of the most common ways to indicate the completeness of the test suite we looked into creating a test coverage of Servo. We also hoped to find parts in the code base that are not yet covered by tests which we could then further examine. 
 
 \paragraph{gcov}
-Gcov is a widely used source code coverage analysis tool that comes with the GNU Compiler Collection (GCC). It is supposed to work with any LLVM-generated files. As the Rust compiler rustc uses LLVM as it's backend we tried gcov first to generate a useable test coverage report. But unfortunately rustc does not yet support all compiler flags that gcov needs to produce coverage data\footnote{Section 4 in $http://ltp.sourceforge.net/documentation/technical_papers/gcov-ols2003.pdf$}. This issue has already been reported\footnote{https://github.com/rust-lang/rfcs/issues/646} but was postponed a year ago due to the 1.0 release of rustc\footnote{https://github.com/rust-lang/rust/issues/690}. We planned on implementing gcov support for rustc wich would enable all rust projects to easily generate test coverage reports but finally decided that it would be out of scope.
+Gcov is a widely used source code coverage analysis tool that comes with the GNU Compiler Collection (GCC). It is supposed to work with any LLVM-generated files. As the Rust compiler rustc uses LLVM as it's backend we tried gcov first to generate a useable test coverage report. But unfortunately rustc does not yet support all compiler flags that gcov needs to produce coverage data\footnote{Section 4 in \url{http://ltp.sourceforge.net/documentation/technical_papers/gcov-ols2003.pdf}}. This issue has already been reported\footnote{\url{https://github.com/rust-lang/rfcs/issues/646}} but was postponed a year ago due to the 1.0 release of rustc\footnote{\url{https://github.com/rust-lang/rust/issues/690}}. We planned on implementing gcov support for rustc wich would enable all rust projects to easily generate test coverage reports but finally decided that it would be out of scope.
 
 \paragraph{kcov}
 The community suggested to try the tool kcov. It works by putting a breakpoint into every line of code and checking them off, when they fired. This increases execution time significantly but proves to be a robust way to generate code coverage as no debug flags need to be implemented. Just the existence of the basic debugging feature of setting breakpoints is enough to let kcov produce a test coverage report. It does not compile on Mac OS or Windows. So we had to start running everything in a linux (ubuntu) virtual machine which slows down execution even more. The next issue we faced was, that the version provided by the package manager (apt-get) was out of date. The solution of building the master branch source still failed until we found out that we had to inxlude libbfd-dev in the build flags.\\
@@ -194,7 +196,7 @@ Now executing \textbf{./mach test} would run our script instead of the servo bin
 The partial coverage reports we got where also not very deterministic. Lines of code covered by one exemplary test ranged from 26976 to 27104 throughout several iterations. These fluctuations are probably caused by non-deterministic behaviour of Servo but could also be caused by inaccurate coverage reports on kcovs side. We can not be completely sure as we couldn't check the roughly 30,000 lines that were executed and trace the execution path.
 
 \subsection{Fuzzy Testing using afl.rs}
-American-fuzzy-lop (afl) is a package that allows finding bugs in Rust code through fuzzy testing. It works by taking exemplary input over stdin and mutating it. But it requires that the binary that should be tested reads it's input over stdin\footnote{https://github.com/frewsxcv/afl.rs}. As Servo does not do this, we looked at Servos html-parser html5ever\footnote{https://github.com/servo/html5ever}. Here we built a test binary, that would read html code over stdin and try to parse it. During the setup we realized that afl.rs would need rust version 1.2 to work and cannot work with newer versions. html5ever however required rust 1.4 to work. This problem deemed fuzzy testing the html5ever component or Servo as a whole undoable at the moment. \todo{wurde das jetzt gefixed?}
+American-fuzzy-lop (afl) is a package that allows finding bugs in Rust code through fuzzy testing. It works by taking exemplary input over stdin and mutating it. But it requires that the binary that should be tested reads it's input over stdin\footnote{\url{https://github.com/frewsxcv/afl.rs}}. As Servo does not do this, we looked at Servos html-parser html5ever\footnote{\url{https://github.com/servo/html5ever}}. Here we built a test binary, that would read html code over stdin and try to parse it. During the setup we realized that afl.rs would need rust version 1.2 to work and cannot work with newer versions. html5ever however required rust 1.4 to work. This problem deemed fuzzy testing the html5ever component or Servo as a whole undoable at the moment. \todo{wurde das jetzt gefixed?}
 
 
 
